# starforge_edu

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEEP_BUG_REPORT.md  FEATURES.md  FEATURES.txt  FEATURE_LIST.md  Makefile  PLAN_14DAY.md  PLAN_5DAY.md  README.md  ROADMAP.md  TASKS.md  conftest.py  manage.py  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.claude/: settings.json
.github/workflows/: ci.yml
agents/: API-CONTRACT.md  CODE-GUIDE.md  DAY-1.md  DAY-2.md  DAY-3.md  DAY-4.md  DAY-5.md  FEATURE_BACKLOG.md  OWNER-ACTIONS.md  TESTING.md  WORKLOG.md
apps/academics/: admin.py  apps.py  grading.py  models.py  presenters.py  selectors.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/access/: admin.py  apps.py  models.py  presenters.py  serializers.py  services.py  urls.py  validation.py  views.py
apps/achievements/: apps.py  models.py  presenters.py  serializers.py  services.py  urls.py  views.py
apps/ai/: admin.py  apps.py  filters.py  models.py  presenters.py  receivers.py  redaction.py  selectors.py  serializers.py  services.py  urls.py  views.py
apps/approvals/: admin.py  apps.py  models.py  presenters.py  selectors.py  serializers.py  services.py  urls.py  views.py
apps/assignments/: admin.py  apps.py  models.py  presenters.py  selectors.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/attendance/: admin.py  apps.py  consumers.py  models.py  presenters.py  routing.py  selectors.py  (+5 more)
celery_tasks/: academics_tasks.py  ai_tasks.py  assignment_tasks.py  attendance_tasks.py  audit_tasks.py  billing_tasks.py  campaign_tasks.py  cleanup_tasks.py  content_tasks.py  finance_tasks.py  health_tasks.py  notification_tasks.py  observability.py  payment_tasks.py  print_tasks.py  report_tasks.py  schedule_tasks.py  tasks.py  tenancy_tasks.py
config/: asgi.py  celery.py  urls.py  urls_public.py  wsgi.py
core/: admin_apps.py  admin_autoregister.py  admin_mixins.py  api_auth.py  authentication.py  availability.py  celery_base.py  container.py  exceptions.py  fields.py  http.py  interfaces.py  job_limits.py  listing.py  logging_filters.py  middleware.py  openapi.py  pagination.py  permissions.py  ratelimit.py  renderers.py  repositories.py  responses.py  schema.py  scoping.py  session_auth.py  tenant_context.py  throttles.py  utils.py  validators.py  viewsets.py
docker/: Caddyfile.starforge.example  Dockerfile  app.env.production.example  backup.env.example  compose.production.env.example  docker-compose.production.yml  docker-compose.yml  entrypoint.sh  minio.env.example  postgres.env.example
docs/: PRODUCT_VISION.md  RESEARCH_UZ_MARKET.md  adding-an-app.md  architecture.md  deployment.md  production-vision.md
scripts/: backup_production.sh  build_locale.py  check_i18n.py  configure_production_storage.sh  create_tenant.py  deploy_production.sh  export_openapi.py  seed_dev.py  verify_restore.sh
tests/: storage_stub.py  test_admin_registration.py  test_api_ratelimit.py  test_architecture_foundation.py  test_auth_flows.py  test_auth_security_hardening.py  test_availability.py  test_backup_scripts.py  test_beat_consolidation.py  test_celery_fanout.py  test_celery_observability.py  test_celery_registration.py  test_crud_foundation.py  test_cursor_pagination.py  test_deploy_security.py  test_i18n.py  test_input_hardening.py  test_json_errors.py  test_layering.py  test_object_scope.py  test_openapi_schema.py  test_permission_matrix.py  test_platform_admin.py  test_plumbing.py  test_production_storage_config.py  test_realtime_ws.py  test_role_credentials_api.py  test_role_native_admin.py  test_tenant_isolation.py
(+972 files in other folders)
