[project]
name = "starforge-edu"
version = "0.1.0"
description = "Multi-tenant education platform backend (Django 6, django-tenants, DRF, Channels, Celery)."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "Proprietary" }
authors = [{ name = "Starforge Edu" }]

dependencies = [
    "django>=6.0,<6.1",
    "djangorestframework>=3.16",
    "djangorestframework-simplejwt[crypto]>=5.4",
    "drf-spectacular>=0.28",
    "django-filter>=24.3",
    "django-cors-headers>=4.6",

    "django-tenants>=3.9",
    "tenant-schemas-celery>=2.2",

    "channels[daphne]>=4.2",
    "channels-redis>=4.2",

    "celery[redis]>=5.4",
    "django-celery-beat>=2.7",

    "psycopg[binary]>=3.2",

    "django-storages[s3]>=1.14",
    "boto3>=1.35",

    "redis>=5.2",

    "django-environ>=0.12",

    "anthropic>=0.40",

    "phonenumbers>=8.13",
    "python-magic>=0.4.27",
    "Pillow>=11.0",
    "requests>=2.32",

    "daphne>=4.1",
    "gunicorn>=23.0",

    "cryptography>=43.0",      # TD-11 field encryption (Fernet); also a simplejwt[crypto] dep
    "python-dateutil>=2.9",    # TD-12 recurrence rules (used from Day 2 schedule)
    "sentry-sdk>=2.0",         # O-10 error tracking (prod-only, no-op without DSN)
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "django-stubs[compatible-mypy]>=5.1",
    "djangorestframework-stubs>=3.15",
    "types-requests>=2.32",
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6",       # TESTING.md §1 parallel test runner
    "factory-boy>=3.3",        # TD-16 / TESTING.md §4 — the factory standard
    "time-machine>=2.16",      # TESTING.md §5 — deterministic time travel
    "pre-commit>=4.0",
    "ipython>=8.30",
    "ipdb>=0.13",
]

[tool.uv]
package = false

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/admin.py",
    "*/apps.py",
    "conftest.py",
    "manage.py",
    "scripts/*",
    "config/asgi.py",
    "config/wsgi.py",
    "docker/*",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "def __str__",
    "@abstractmethod",
]
